Create habitData's cases and repo, add POST request for creating data points
