# backend/core/api/openapi.yaml
@@ -11,6 +11,7 @@ tags:
   - name: Auth
   - name: Users
   - name: Habits
+  - name: HabitData
   - name: Projects
   - name: Skilltrees
   - name: Tasks
@@ -300,6 +301,47 @@ paths:
           description: Habit not found
         '500':
           description: Unexpected error
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/ErrorResponse' }
+
+  /habit/{habit_id}/data_point:
+    post:
+      summary: Create a data point
+      operationId: createHabitDataPoint
+      tags: [HabitData]
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: habit_id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HabitData'
+      responses:
+        '201':
+          description: Data point created successfully
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Invalid request data
+        '401':
+          description: Unauthorized
+        '409':
+          description: Data point already exists
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/ErrorResponse' }
+        '500':
+          description: Internal server error
           content:
             application/json:
               schema: { $ref: '#/components/schemas/ErrorResponse' }
